--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Hello 3MTT Bloggers</h1>
-    <p>Hello everyone! bla bla bla.</p>
+    <p>Hello everyone! blah blah blah.</p>
   </body>
 </html>
